# aurora-amun-python-sdk

./: .flake8  .gitignore  404.html  LICENSE  README.md  README_DEVELOP.md  index.html  pydoc-markdown.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: deploy.yaml
assets/css/: styles.88e66093.css
assets/js/: 0d66193e.6897119e.js  0e384e19.bf87deb2.js  17896441.9823967e.js  1f391b9e.2e7e4661.js  2db26b3f.7c95765d.js  3cbf8d28.1d76131f.js  3fb850ab.5ab56066.js  45a990a9.3e0f28b7.js  4bfcd82c.623d9549.js  4bfcd82c.6fa76910.js  4bfcd82c.9de30401.js  5e95c892.89dcb81c.js  63.110df2f9.js  (+37 more)
aurora_amun_sdk/: __main__.py  amun.py  utils.py  valuations.py
docs/: 404.html  index.html  make.ps1  sitemap.xml
docusaurus-site/: README.md  docusaurus.config.js  package-lock.json  package.json
examples/: add_custom_turbine.py  authentication.py  authentication_example.py  copy_valuation.py  create_valuation_example.py  generation_valuation_example.py  get_load_factors.py  get_load_factors_batch.py  get_load_factors_batch_large.py  get_load_factors_example.py  get_load_factors_with_dictionary.py  get_power_curve.py  get_wind.py  get_wind_atlas.py  intraday.py  list_valuations.py  region_details_example.py  run_average_wind_speed_valuation.py  run_calibrated_generation_valuation.py  run_custom_wind_valuation.py  run_generate_loadfactor.py  run_generation_valuation.py  run_valuation.py  run_valuation_P50Yield.py  run_valuation_time_Based_curtailment.py  search_windfarms.py  valuations_example.py
tests/: test_load_factors.py  test_raw_generation_upload.py  utils.py
(+140 files in other folders)
