[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["./"]

[project]
name = "aurora_amun_sdk"
version = "0.13.0"
authors = [
  { name = "Aurora Development", email = "aurora_development@auroraer.com" },
]
readme = "README.md"
keywords = [
  "aurora",
  "energy",
  "research",
  "auroraenergyresearch",
  "aer",
  "amun",
  "sdk",
]
license = { file = "LICENSE" }
dependencies = ["requests==2.28.2"]

[project.urls]
repository = "https://github.com/AuroraEnergyResearch/aurora-amun-python-sdk"

[project.optional-dependencies]
setup = ["pytest-runner"]
tests = ["pytest"]
development = [
  "flake8",
  "black",
  "pytest",
  "snapshottest",
  "debugpy",
  "novella",
  "pydoc-markdown[novella]",
]
notebooks = ["matplotlib", "pandas", "ipykernel"]
